--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -35,7 +35,7 @@
 
     <p>&nbsp;</p>
     <div class="container">
-        <h3>Welcome to the Kirubel  Management system (kMS)</h3>
+        <h3>Welcome to the Kirubel Registral system </h3>
         <hr/>
         <div style="font-size: 1em">
             To browse and manage the <a href="/elibrary/book/list">catalogue of Books</a>, please first make sure to read the
